update App in react Router

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Un saludo para TheEdal y También para Vyrek"
     />
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <!--
@@ -30,7 +30,7 @@
     <title>Discord Bots | MyBOT List</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Activa JavaScript :D.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
