Update Index.html head metas default

--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,31 @@
 <html lang="es">
   <head>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
- 
+    <title>Discord Bots — MyBOT List</title>
+
+    <meta charset="utf-8" />
+    <link rel="icon" href='https://portalmybot.com/assets/img/logo/icon-portal.png' type="image/x-icon"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+    <meta name="theme-color" content="#5865F2" />
+
+    <meta name="title" content='Discord Bots — MyBOT List' />
+    <meta name="description" content='Lista de Bots públicos de Discord en español, descubre nuevos Bots desarrollados por los miembros de la comunidad MyBOT Team' />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content='https://portalmybot.com/list/' />
+    <meta property="og:title" content='Discord Bots — MyBOT List' />
+    <meta property="og:description" content='Lista de Bots públicos de Discord en español, descubre nuevos Bots desarrollados por los miembros de la comunidad MyBOT Team' />
+    <meta property="og:image" content='https://i.imgur.com/Juh672X.png' />
+
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content='https://portalmybot.com/list/' />
+    <meta property="twitter:title" content='Discord Bots — MyBOT List' />
+    <meta property="twitter:description" content='Lista de Bots públicos de Discord en español, descubre nuevos Bots desarrollados por los miembros de la comunidad MyBOT Team' />
+    <meta property="twitter:image" content='https://i.imgur.com/Juh672X.png' />
+
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+
   </head>
   <body>
     <noscript>Activa JavaScript :D.</noscript>
