Update Seo and Tile in Home, Me and index.html

--- a/public/index.html
+++ b/public/index.html
@@ -17,13 +17,12 @@
     <meta property="og:url" content='https://portalmybot.com/list/' />
     <meta property="og:title" content='Discord Bots — MyBOT List' />
     <meta property="og:description" content='Lista de Bots públicos de Discord en español, descubre nuevos Bots desarrollados por los miembros de la comunidad MyBOT Team' />
-    <meta property="og:image" content='https://i.imgur.com/Juh672X.png' />
+    <meta property="og:image" content='https://i.imgur.com/DC0Kp0D.png' />
 
-    <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content='https://portalmybot.com/list/' />
     <meta property="twitter:title" content='Discord Bots — MyBOT List' />
     <meta property="twitter:description" content='Lista de Bots públicos de Discord en español, descubre nuevos Bots desarrollados por los miembros de la comunidad MyBOT Team' />
-    <meta property="twitter:image" content='https://i.imgur.com/Juh672X.png' />
+    <meta property="twitter:image" content='https://i.imgur.com/DC0Kp0D.png' />
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 
