Update APP Test Paypal

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,8 @@
     <meta property="twitter:image" content='https://i.imgur.com/DC0Kp0D.png' />
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-
+    <script src="https://www.paypal.com/sdk/js?client-id=%REACT_APP_CLIENT_PAYPAL%&currency=USD"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   </head>
   <body>
     <noscript>Activa JavaScript :D.</noscript>
